# argparser

./: README.md  pyproject.toml
argparser/: __init__.py
argparser/classes/: __init__.py  argument.py  argument_group.py  group_config.py  group_lookup.py
argparser/formatter/: formatter.py
argparser/headers/: definitions.py  exceptions.py  types_c.py  types_c_export.py
argparser/parsing/: parsing.py
argparser/utils/: utils.py
tests/: config.yaml  test.py
