[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argparser"
version = "1.0.0"
authors = [{ name="aaron", email="aaronvegoda@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
description = "An argument parser for Python"
license = { file = "LICENCE.txt" }
dependencies = []

[tool.setuptools.package-data]
argparser = ["py.typed"]
